# kvcache-dsl

./: CMakeLists.txt  README.md
examples/: vectorize.mlir
include/kv/: KVAttributes.h  KVAttributes.td  KVBase.td  KVDialect.h  KVDialect.td  KVOps.h  KVOps.td  KVTypes.h  KVTypes.td
lib/: CMakeLists.txt
lib/KV/: CMakeLists.txt  KVAttributes.cpp  KVDialect.cpp  KVOps.cpp  KVTypes.cpp
lib/KV/Conversion/: KVToVector.cpp
lib/KV/Transforms/: KVAutoReorder.cpp  KVLayoutAnalysis.cpp
lib/KV/Utils/: StrideAnalysis.h
test/: CMakeLists.txt  layout-reorder-dsh-to-shd_part1.mlir  layout_reorder_dsh_to_shd.mlir  lit.cfg.py  lit.site.cfg.py.in  mini.mlir  test.mlir  vector_broadcast.mlir  vector_transfer_read.mlir
tools/: CMakeLists.txt
tools/kv-opt/: CMakeLists.txt  kv-opt.cpp
