add_llvm_executable(kv-opt
  kv-opt.cpp
)

target_link_libraries(kv-opt
  PRIVATE
  KVCacheDSL
  MLIRIR
  MLIRParser
  MLIRPass
  MLIRSupport
  MLIRTransforms
  MLIRVectorDialect
  MLIRMemRefDialect
  MLIRArithDialect
  MLIRFuncDialect
  MLIRSCFDialect
  MLIROptLib
  MLIRExecutionEngine
  MLIRTargetLLVMIRExport
  MLIRLLVMToLLVMIRTranslation
  MLIRBuiltinToLLVMIRTranslation
)
